# fs-benchmark

./: README.md
fs-async-server/: 40-logical-core-machine-c-uv-8brpp.csv  40-logical-cores-machine-fs-8brpp-net223.csv  40-logical-cores-machine-fs-8brpp-net3.csv  AsyncExt.fs  Connection.fs  Program.fs  fs-async-server.fsproj  results.ods
uv-hammer/: CMakeLists.txt  hammer.c
